[gd_scene load_steps=31 format=3 uid="uid://b2dyxo3826bub"]

[ext_resource type="Script" uid="uid://f2uhmm6ihlir" path="res://screens/game_screen.gd" id="1_p7x0p"]
[ext_resource type="Script" uid="uid://d0pmiko84khl7" path="res://ui/hub/hub_controller.gd" id="2_b7a1e"]
[ext_resource type="Script" uid="uid://fcg5o8wa46y5" path="res://engine/game_world.gd" id="2_nvp4f"]
[ext_resource type="PackedScene" uid="uid://4ont2joynfbs" path="res://engine/map_container.tscn" id="2_sne8m"]
[ext_resource type="Texture2D" uid="uid://6wbudjggjoyn" path="res://Assets/UI/VentanaPrincipal.jpg" id="3_6rrxf"]
[ext_resource type="PackedScene" uid="uid://b5jojh26118kn" path="res://ui/hub/inventory_container.tscn" id="3_q7e6u"]
[ext_resource type="FontFile" uid="uid://b2p50emcdbfkt" path="res://Assets/Fonts/alegreya-sans/AlegreyaSans-Regular.ttf" id="7_rqp22"]
[ext_resource type="FontFile" uid="uid://dbw0g6ktxq562" path="res://Assets/Fonts/alegreya-sans/AlegreyaSans-Italic.ttf" id="8_s70vx"]
[ext_resource type="FontFile" uid="uid://6qyycyyfwleu" path="res://Assets/Fonts/alegreya-sans/AlegreyaSans-BoldItalic.ttf" id="9_u317p"]
[ext_resource type="FontFile" uid="uid://btcu01y0sr5he" path="res://Assets/Fonts/alegreya-sans/AlegreyaSans-Bold.ttf" id="10_7ceix"]
[ext_resource type="PackedScene" uid="uid://bx1gpuqy2er8h" path="res://ui/hub/minimap.tscn" id="12_s70vx"]
[ext_resource type="PackedScene" uid="uid://7gtb4htuo6c8" path="res://ui/hub/stat_bar.tscn" id="13_u317p"]
[ext_resource type="Texture2D" uid="uid://dxc2lq5b3lc1f" path="res://Assets/UI/stat_bars.png" id="14_7ceix"]
[ext_resource type="Script" uid="uid://dnw8e0dssdpj4" path="res://ui/hub/stat_bar.gd" id="15_dlj5t"]
[ext_resource type="Texture2D" uid="uid://dkhonpkjanea7" path="res://Assets/UI/panel_inventario.jpg" id="16_t2d6d"]
[ext_resource type="PackedScene" uid="uid://cmwexlttk8ltw" path="res://ui/hub/spell_list_panel.tscn" id="17_t2d6d"]

[sub_resource type="FontVariation" id="FontVariation_ltsmt"]
base_font = ExtResource("7_rqp22")

[sub_resource type="FontVariation" id="FontVariation_t2d6d"]
base_font = ExtResource("10_7ceix")

[sub_resource type="FontVariation" id="FontVariation_ehycb"]
base_font = ExtResource("9_u317p")

[sub_resource type="FontVariation" id="FontVariation_dlj5t"]
base_font = ExtResource("8_s70vx")

[sub_resource type="FontVariation" id="FontVariation_gwwhr"]
base_font = ExtResource("7_rqp22")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rrxf"]
bg_color = Color(0.104888, 0.192391, 0.192544, 0.392157)

[sub_resource type="FontVariation" id="FontVariation_ayhfv"]
base_font = ExtResource("7_rqp22")

[sub_resource type="AtlasTexture" id="AtlasTexture_gwwhr"]
atlas = ExtResource("14_7ceix")
region = Rect2(3, 3, 89, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehycb"]
atlas = ExtResource("14_7ceix")
region = Rect2(3, 19, 89, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2d6d"]
atlas = ExtResource("14_7ceix")
region = Rect2(3, 35, 89, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlj5t"]
atlas = ExtResource("14_7ceix")
region = Rect2(3, 51, 89, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce3ml"]
atlas = ExtResource("14_7ceix")
region = Rect2(3, 67, 89, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ceix"]
atlas = ExtResource("14_7ceix")
region = Rect2(3, 85, 175, 18)

[sub_resource type="LabelSettings" id="LabelSettings_ehycb"]
font_size = 12

[node name="GameScreen" type="Node" node_paths=PackedStringArray("_gameInput", "_gameWorld", "_camera")]
script = ExtResource("1_p7x0p")
_gameInput = NodePath("HubController")
_gameWorld = NodePath("HubController/MainViewportContainer/Viewport/GameWorld")
_camera = NodePath("HubController/MainViewportContainer/Viewport/GameWorld/Camera2D")

[node name="HubController" type="CanvasLayer" parent="." node_paths=PackedStringArray("_inventoryContainer", "_consoleRichTextLabel", "_consoleInputLineEdit", "_camera")]
script = ExtResource("2_b7a1e")
_inventoryContainer = NodePath("Inventory-Spell/InventoryPanel/InventoryContainer")
_consoleRichTextLabel = NodePath("Console")
_consoleInputLineEdit = NodePath("ConsoleInput")
_camera = NodePath("MainViewportContainer/Viewport/GameWorld/Camera2D")

[node name="TextureRect" type="TextureRect" parent="HubController"]
offset_right = 800.0
offset_bottom = 600.0
texture = ExtResource("3_6rrxf")
metadata/_edit_lock_ = true

[node name="MainViewportContainer" type="SubViewportContainer" parent="HubController"]
custom_minimum_size = Vector2(544, 416)
offset_left = 10.0
offset_top = 134.0
offset_right = 554.0
offset_bottom = 550.0
focus_mode = 0
stretch = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Viewport" type="SubViewport" parent="HubController/MainViewportContainer"]
handle_input_locally = false
size = Vector2i(544, 416)
render_target_update_mode = 4

[node name="GameWorld" type="Node2D" parent="HubController/MainViewportContainer/Viewport" node_paths=PackedStringArray("_mapContainer")]
position = Vector2(0, -1)
script = ExtResource("2_nvp4f")
_mapContainer = NodePath("MapContainer")

[node name="Camera2D" type="Camera2D" parent="HubController/MainViewportContainer/Viewport/GameWorld"]

[node name="MapContainer" parent="HubController/MainViewportContainer/Viewport/GameWorld" instance=ExtResource("2_sne8m")]

[node name="Console" type="RichTextLabel" parent="HubController"]
offset_left = 11.0
offset_top = 5.0
offset_right = 446.0
offset_bottom = 105.0
theme_override_fonts/normal_font = SubResource("FontVariation_ltsmt")
theme_override_fonts/bold_font = SubResource("FontVariation_t2d6d")
theme_override_fonts/bold_italics_font = SubResource("FontVariation_ehycb")
theme_override_fonts/italics_font = SubResource("FontVariation_dlj5t")
bbcode_enabled = true
scroll_following = true

[node name="ConsoleInput" type="LineEdit" parent="HubController"]
visible = false
offset_left = 11.0
offset_top = 108.0
offset_right = 553.0
offset_bottom = 132.0
theme_override_fonts/font = SubResource("FontVariation_gwwhr")
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxFlat_6rrxf")

[node name="Minimap" parent="HubController" instance=ExtResource("12_s70vx")]
offset_left = 454.0
offset_top = 5.0
offset_right = 554.0
offset_bottom = 105.0
metadata/_edit_lock_ = true

[node name="Labels" type="Node" parent="HubController"]

[node name="LblGold" type="Label" parent="HubController/Labels"]
unique_name_in_owner = true
offset_left = 715.0
offset_top = 388.0
offset_right = 788.0
offset_bottom = 408.0
theme_override_colors/font_color = Color(0.886754, 0.581706, 0, 1)
theme_override_fonts/font = ExtResource("7_rqp22")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_lock_ = true

[node name="LblStrength" type="Label" parent="HubController/Labels"]
unique_name_in_owner = true
offset_left = 511.0
offset_top = 566.0
offset_right = 539.0
offset_bottom = 589.0
theme_override_colors/font_color = Color(0, 0.54902, 0, 1)
text = "38"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_lock_ = true

[node name="LblAgility" type="Label" parent="HubController/Labels"]
unique_name_in_owner = true
offset_left = 453.0
offset_top = 566.0
offset_right = 481.0
offset_bottom = 589.0
theme_override_colors/font_color = Color(0, 0.854902, 0, 1)
text = "38"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_lock_ = true

[node name="LblLevel" type="Label" parent="HubController/Labels"]
unique_name_in_owner = true
offset_left = 574.0
offset_top = 59.0
offset_right = 602.0
offset_bottom = 82.0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_lock_ = true

[node name="LblName" type="Label" parent="HubController/Labels"]
unique_name_in_owner = true
offset_left = 620.0
offset_top = 40.0
offset_right = 776.0
offset_bottom = 63.0
text = "Dummy"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_lock_ = true

[node name="LblArmor" type="Label" parent="HubController/Labels"]
unique_name_in_owner = true
offset_left = 34.0
offset_top = 566.0
offset_right = 69.0
offset_bottom = 589.0
theme_override_fonts/font = SubResource("FontVariation_ayhfv")
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_lock_ = true

[node name="LblHelmet" type="Label" parent="HubController/Labels"]
unique_name_in_owner = true
offset_left = 91.0
offset_top = 566.0
offset_right = 126.0
offset_bottom = 589.0
theme_override_fonts/font = SubResource("FontVariation_ayhfv")
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_lock_ = true

[node name="LblWeapon" type="Label" parent="HubController/Labels"]
unique_name_in_owner = true
offset_left = 149.0
offset_top = 565.0
offset_right = 184.0
offset_bottom = 588.0
theme_override_fonts/font = SubResource("FontVariation_ayhfv")
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_lock_ = true

[node name="LblShield" type="Label" parent="HubController/Labels"]
unique_name_in_owner = true
offset_left = 207.0
offset_top = 565.0
offset_right = 242.0
offset_bottom = 588.0
theme_override_fonts/font = SubResource("FontVariation_ayhfv")
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_lock_ = true

[node name="StatBars" type="Node" parent="HubController"]

[node name="StaminaStatBar" parent="HubController/StatBars" instance=ExtResource("13_u317p")]
offset_left = 574.0
offset_top = 402.0
offset_right = 663.0
offset_bottom = 413.0
texture_progress = SubResource("AtlasTexture_gwwhr")
metadata/_edit_lock_ = true

[node name="HealthStatBar" parent="HubController/StatBars" instance=ExtResource("13_u317p")]
offset_left = 574.0
offset_top = 432.0
offset_right = 663.0
offset_bottom = 443.0
texture_progress = SubResource("AtlasTexture_ehycb")
metadata/_edit_lock_ = true

[node name="ManaStatBar" parent="HubController/StatBars" instance=ExtResource("13_u317p")]
offset_left = 574.0
offset_top = 464.0
offset_right = 663.0
offset_bottom = 475.0
texture_progress = SubResource("AtlasTexture_t2d6d")
metadata/_edit_lock_ = true

[node name="HungerStatBar" parent="HubController/StatBars" instance=ExtResource("13_u317p")]
offset_left = 574.0
offset_top = 496.0
offset_right = 663.0
offset_bottom = 507.0
texture_progress = SubResource("AtlasTexture_dlj5t")
metadata/_edit_lock_ = true

[node name="ThirstStatBar" parent="HubController/StatBars" instance=ExtResource("13_u317p")]
offset_left = 574.0
offset_top = 526.0
offset_right = 663.0
offset_bottom = 537.0
texture_progress = SubResource("AtlasTexture_ce3ml")
metadata/_edit_lock_ = true

[node name="ExperienceStatBar" type="TextureProgressBar" parent="HubController/StatBars"]
offset_left = 610.0
offset_top = 72.0
offset_right = 785.0
offset_bottom = 90.0
max_value = 0.0
texture_progress = SubResource("AtlasTexture_7ceix")
script = ExtResource("15_dlj5t")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="HubController/StatBars/ExperienceStatBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0/0"
label_settings = SubResource("LabelSettings_ehycb")
horizontal_alignment = 1
clip_text = true

[node name="Buttons" type="Node" parent="HubController"]

[node name="BtnQuit" type="TextureButton" parent="HubController/Buttons"]
offset_left = 772.0
offset_top = 12.0
offset_right = 789.0
offset_bottom = 29.0
metadata/_edit_lock_ = true

[node name="BtnDropGold" type="TextureButton" parent="HubController/Buttons"]
offset_left = 695.0
offset_top = 390.0
offset_right = 788.0
offset_bottom = 408.0

[node name="BtnMinimize" type="TextureButton" parent="HubController/Buttons"]
offset_left = 753.0
offset_top = 12.0
offset_right = 770.0
offset_bottom = 29.0
metadata/_edit_lock_ = true

[node name="Inventory-Spell" type="Node" parent="HubController"]

[node name="InventoryPanel" type="TextureRect" parent="HubController/Inventory-Spell"]
offset_left = 561.0
offset_top = 98.0
offset_right = 789.0
offset_bottom = 350.0
texture = ExtResource("16_t2d6d")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="InventoryContainer" parent="HubController/Inventory-Spell/InventoryPanel" instance=ExtResource("3_q7e6u")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -47.0
offset_right = -29.0
offset_bottom = 113.0
grow_horizontal = 0
grow_vertical = 2
columns = 5

[node name="SpellListPanel" parent="HubController/Inventory-Spell" instance=ExtResource("17_t2d6d")]
visible = false
offset_left = 561.0
offset_top = 98.0
offset_right = 789.0
offset_bottom = 350.0
metadata/_edit_lock_ = true

[node name="ShowInventory" type="TextureButton" parent="HubController/Inventory-Spell"]
offset_left = 574.0
offset_top = 138.0
offset_right = 674.0
offset_bottom = 166.0
focus_mode = 0
metadata/_edit_lock_ = true

[node name="ShowSpells" type="TextureButton" parent="HubController/Inventory-Spell"]
offset_left = 677.0
offset_top = 138.0
offset_right = 776.0
offset_bottom = 166.0
focus_mode = 0
metadata/_edit_lock_ = true

[node name="Buttons-Misc" type="Node" parent="HubController"]

[node name="btnSkills" type="TextureButton" parent="HubController/Buttons-Misc"]
offset_left = 578.0
offset_top = 78.0
offset_right = 597.0
offset_bottom = 94.0

[node name="btnStadistics" type="TextureButton" parent="HubController/Buttons-Misc"]
offset_left = 693.0
offset_top = 422.0
offset_right = 777.0
offset_bottom = 441.0

[node name="btnOptions" type="TextureButton" parent="HubController/Buttons-Misc"]
offset_left = 693.0
offset_top = 446.0
offset_right = 777.0
offset_bottom = 465.0

[node name="btnGuilds" type="TextureButton" parent="HubController/Buttons-Misc"]
offset_left = 693.0
offset_top = 470.0
offset_right = 777.0
offset_bottom = 489.0

[node name="btnGroups" type="TextureButton" parent="HubController/Buttons-Misc"]
offset_left = 693.0
offset_top = 497.0
offset_right = 777.0
offset_bottom = 516.0

[node name="Timers" type="Node" parent="."]

[node name="PingTimer" type="Timer" parent="Timers"]

[connection signal="gui_input" from="HubController/MainViewportContainer" to="HubController" method="_on_main_viewport_container_gui_input"]
[connection signal="gui_input" from="HubController/Console" to="HubController" method="_on_console_gui_input"]
[connection signal="meta_clicked" from="HubController/Console" to="HubController" method="_on_console_meta_clicked"]
[connection signal="mouse_exited" from="HubController/Console" to="HubController" method="_on_console_mouse_exited"]
[connection signal="text_submitted" from="HubController/ConsoleInput" to="HubController" method="_OnConsoleInputTextSubmitted"]
[connection signal="click" from="HubController/Minimap" to="HubController" method="_on_minimap_click"]
[connection signal="changed" from="HubController/StatBars/ExperienceStatBar" to="HubController/StatBars/ExperienceStatBar" method="_on_changed"]
[connection signal="value_changed" from="HubController/StatBars/ExperienceStatBar" to="HubController/StatBars/ExperienceStatBar" method="_on_value_changed"]
[connection signal="pressed" from="HubController/Buttons/BtnQuit" to="HubController" method="_on_btn_quit_pressed"]
[connection signal="pressed" from="HubController/Buttons/BtnDropGold" to="HubController" method="_on_btn_drop_gold_pressed"]
[connection signal="pressed" from="HubController/Buttons/BtnMinimize" to="HubController" method="_on_btn_minimize_pressed"]
[connection signal="pressed" from="HubController/Inventory-Spell/ShowInventory" to="HubController/Inventory-Spell/InventoryPanel" method="set_visible" binds= [true]]
[connection signal="pressed" from="HubController/Inventory-Spell/ShowInventory" to="HubController/Inventory-Spell/SpellListPanel" method="set_visible" binds= [false]]
[connection signal="pressed" from="HubController/Inventory-Spell/ShowSpells" to="HubController/Inventory-Spell/InventoryPanel" method="set_visible" binds= [false]]
[connection signal="pressed" from="HubController/Inventory-Spell/ShowSpells" to="HubController/Inventory-Spell/SpellListPanel" method="set_visible" binds= [true]]
[connection signal="timeout" from="Timers/PingTimer" to="." method="_OnPingTimerTimeout"]
